--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,21 +14,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Use PNPM
-        uses: pnpm/action-setup@v2.2.4
+      - uses: pnpm/action-setup@v3
         with:
-          version: 8.6.1
+          version: 8
 
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          version: 8.6.1
-          node-version: 18
-          cache: "pnpm"
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: "**/pnpm-lock.yaml"
 
       - name: Install NPM Dependencies
         run: pnpm install
