--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@commitlint/config-conventional": "^17.6.3",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@manypkg/cli": "^0.21.2",
-    "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/parser": "^5.59.7",
@@ -68,5 +67,8 @@
     "typescript": "^4.9.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.31.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.25"
   }
 }
